--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -1137,7 +1137,7 @@ Pavyzdžiai:
   \item Apmokytas modifikuotas Tesseract LSTM rekurentinis neuroninis tinklas panaudojant sugeneruotus paveikslėlius.
   \item Parašyta programa, kuri gauna rėmelio koordinates iš paveikslėlio, kuriame yra numeris, pasinaudojus neuroniniu tinklu.
   \item Parašyta programa, kuri iškerpa rėmelį pagal koordinates ir pasinaudojus modifikuotu Tesseract LSTM rekurentiniu neuroniniu tinklu atpažįsta numerį bei atvaizduoja pradiniame paveikslėlyje.
-  \item Tinklas ištestuotas su tikrais paveikslėliais, kuriose yra lietuviški automobilių numeriai.
+  \item Tinklas ištestuotas su tikrais paveikslėliais, kuriuose yra lietuviški automobilių numeriai.
 \end{enumerate}
 
 \sectionnonum{Išvados}
