--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -1151,7 +1151,7 @@ Atlikus eksperimentą buvo gautos šios išvados:
   \item Mokant rekurentinį neuroninį tinklą didelę neigiamą įtaką tikslumui daro paveikslėlių iškrypimai.
   \item Prieš siunčiant paveikslėlį į rekurentinį neuroninį tinklą reikia jį apdoroti pagal rekomendacijas, kad paveikslėlis būtų atpažintas.
   \item Naudojant rekurentinį neuroninį tinklą simbolių atpažinimas vyksta sparčiau nei kiti išbandyti OCR įrankiai.
-  \item Naudojant rekurentinį neuroninį tinklą atpažinimo tikslumas gali būti didesnis nei skandartinių OCR įrankių, jei modelis yra tinkamai apmokytas.
+  \item Naudojant rekurentinį neuroninį tinklą atpažinimo tikslumas gali būti didesnis nei standartinių OCR įrankių, jei modelis yra tinkamai apmokytas.
 \end{enumerate}
 \pagebreak
 \printbibliography[heading=bibintoc]
